mujhe koi utha ke pani me fekdo

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="/register" method="post">
+    <form action="/login" method="post">
         <input type="email" required name="email" placeholder="Email">
         <input type="password" required name="password" placeholder="Password">
         <button type="submit">Submit</button>
