bhul gya kya kya dala

--- a/views/agency.ejs
+++ b/views/agency.ejs
@@ -17,6 +17,8 @@
         <form action="/agency/buy" method="post">
             <button>BUY PASS 🤑🤑</button>
         </form>
+
+        <a href="/spaceguy/code">already have a pass???</a>
     <% } %>
 </body>
 </html>
