--- a/views/spaceguyLogin.ejs
+++ b/views/spaceguyLogin.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="/login/spaceguy" method="post">
+    <form action="/spaceguy/code" method="post">
         <label for="code">Enter your enterprise code:</label>
         <input type="code" required name="code" placeholder="code">
         <button type="submit">Submit</button>
