--- a/views/health.ejs
+++ b/views/health.ejs
@@ -49,10 +49,14 @@
         margin-top: 30px;
         background-color: #222222;
         border-radius: 8px;
-        padding: 20px;
+        padding: 20px; 
       }
       .report-content {
-        display: grid;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         gap: 20px;
       }
