--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
-    Hello there 👋
+    <div id="main">
+
+        <a href="/register">/register</a> <br>
+        <a href="/login">/login</a> <br>
+        <a href="/spaceguy">/spaceguy</a> <br>
+        <a href="/agency">/agency</a> <br>
+        <a href="/code">/spaceguy/code</a> <br>
+        <a href="/clean">/spaceguy/clean</a> <br>
+        <a href="/health">/spaceguy/health</a>
+    </div>
 </body>
 </html>
