--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,6 +82,7 @@
             <label for="password">Enter password:</label>
             <input type="password" required name="password" placeholder="Password">
             <button type="submit">Submit</button>
+            <p>Don't have an account? <a href="/register">Register Here.</a></p>
         </form>
         <% if (messages.error) { %>
             <p><%= messages.error %></p>
