--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Quicksand:wght@300..700&family=Space+Grotesk:wght@300..700&display=swap');
-body, html {
+body, html, button, input {
     margin: 0;
     padding: 0;
     font-family: 'space grotesk';
     background-color: #111111;
     color: #ffffff;
 }
+a, a:link {
+    color: #ffffff;
+}
 
-button, input {
-    font-family: 'space grotesk';
+nav {
+    padding: 1vh;
+}
+
+nav a {
+    text-decoration: none;
+    cursor: pointer;
 }
