layout file + stars bg

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="/style.css">
+<% layout('layout') -%>
 
-</head>
-<body>
     <div id="main">
 
         <a href="/register">/register</a> <br>
@@ -18,5 +10,3 @@
         <a href="/clean">/spaceguy/clean</a> <br>
         <a href="/health">/spaceguy/health</a>
     </div>
-</body>
-</html>
