--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>Login</title>
+<% layout('layout') -%>
     <style>
         body{
             display: flex;
@@ -71,8 +65,7 @@
             color: #fd532f;
         }
     </style>
-</head>
-<body>
+
     <div id="main">
 
         <h1>Login</h1>
@@ -88,5 +81,3 @@
             <p><%= messages.error %></p>
             <% } %>
         </div>
-</body>
-</html>
