--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html><head>
+  <link rel="stylesheet" href="/style.css">
     <style>
-      body {
-        font-family: 'Space Mono', monospace;
-        background-color: #0a0a1a;
-        color: #e0e0e0;
-        margin: 0;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
       .container {
         max-width: 800px;
         width: 100%;
@@ -28,13 +19,17 @@
         z-index: -1;
       }
     </style>
+    <title><%= title %></title>
+    
     </head>
     <body>
       <svg class="stars" xmlns="http://www.w3.org/2000/svg">
-        <rect width="100%" height="100%" fill="#0a0a1a"/>
+        <rect width="100%" height="100%" fill="#111111"/>
         <g id="stars"></g>
       </svg>
-    
+      
+      <%- body %>
+      
       <script>
         const starsSvg = document.querySelector(".stars #stars");
         for (let i = 0; i < 100; i++) {
