--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>Register</title>
-
+<% layout('layout') -%>
     <style>
         body{
             display: flex;
@@ -72,7 +65,6 @@
             color: #fd532f;
         }
     </style>
-</head>
 <body>
     <div id="main">
 
