--- a/views/agency.ejs
+++ b/views/agency.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+<% layout('layout') -%>
     <style>
         body {
             display: flex;
@@ -73,8 +66,6 @@
             color: #fd532f;
         }
     </style>
-</head>
-
 <body>
     <% if (userdata.hasPlan===true) { %>
         Your secret code, make sure to not share it with anyone, only with your spaceguys
