--- a/views/ai.ejs
+++ b/views/ai.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI</title>
-</head>
+<% layout('layout') -%>
 <body>
     <h1 id="status">Shambhu is currently sleeping 😪</h1>
     <p id="btnText">Press button to wake up Shambhu</p>
