--- a/views/junk.ejs
+++ b/views/junk.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-
-
-<html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title></title>
+<% layout('layout') -%>
 <style>
     body, html {
     margin: 0;
@@ -69,7 +62,6 @@
 
     }
 </style>
-</head>
 <body>
 <div id="space"></div>
 <div id="stats">
