--- a/views/sos.ejs
+++ b/views/sos.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOS</title>
-</head>
+<% layout('layout') -%>
 <body>
 <button id="mainSos">SOS</button>
 </body>
