--- a/views/spaceguy.ejs
+++ b/views/spaceguy.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+<% layout('layout') -%>
     <style>
         button {
             padding: 1.5vmin 2vmin;
@@ -22,7 +16,6 @@
             gap: 1vh;
         }
     </style>
-</head>
 <body>
     <div id="main">
         <h1>Hi, <%= user.fname +' '+ user.lname %></h1>
