--- a/views/tracker.ejs
+++ b/views/tracker.ejs
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+<% layout('layout') -%>
     <style>
         body,
         html {
@@ -74,7 +69,6 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/satellite.js/4.1.3/satellite.min.js"></script>
-</head>
 
 <body>
     <div class="container">
