--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,7 +19,7 @@
         z-index: -1;
       }
     </style>
-    <title><%= title %></title>
+    <title><%= locals.title ? title : "Spaceguy" %></title>
     
     </head>
     <body>
