landing page, nav and little little things

--- a/views/agency.ejs
+++ b/views/agency.ejs
@@ -67,6 +67,7 @@
         }
     </style>
 <body>
+    <%- include ./components/navLanding %>
     <% if (userdata.hasPlan===true) { %>
         Your secret code, make sure to not share it with anyone, only with your spaceguys
         <%= userdata.userid %>
