--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,8 @@
         <a href="/login">/login</a> <br>
         <a href="/spaceguy">/spaceguy</a> <br>
         <a href="/agency">/agency</a> <br>
-        <a href="/code">/spaceguy/code</a> <br>
-        <a href="/clean">/spaceguy/clean</a> <br>
-        <a href="/health">/spaceguy/health</a>
+        <a href="/spaceguy/code">/spaceguy/code</a> <br>
+        <a href="/spaceguy/clean">/spaceguy/clean</a> <br>
+        <a href="/spaceguy/health">/spaceguy/health</a> <br>
+        <a href="/spaceguy/food">/spaceguy/food</a>
     </div>
