--- a/views/spaceguy.ejs
+++ b/views/spaceguy.ejs
@@ -15,22 +15,93 @@
             justify-content: center;
             gap: 1vh;
         }
-        .button{
+
+        .button {
             text-decoration: none;
             color: #fff;
         }
-    </style>
-<body>
-    <div id="main">
-        <h1>Hi, <%= user.fname +' '+ user.lname %></h1>
 
-        <div id="buttons">
-            <a class="button" href="/spaceguy/sos">Report Emergency</a>            
-            <a class="button" href="/spaceguy/clean">Start Junk Cleaning</a>
-            <a class="button" href="/spaceguy/track">Track my location</a>
+        #sosButton {
+            width: 13vh;
+            height: 13vh;
+            border-radius: 50%;
+            border: none;
+            font-weight: bold;
+            cursor: pointer;
+            font-size: 1.8em;
+            position: fixed;
+            bottom: 2vh;
+            right: 2vh;
+        }
+
+        #main {
+            padding: 2vmin;
+            margin-top: 10vh;
+            width: 90%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .dash-card-1 {
+            width: 18vw;
+            height: fit-content;
+            padding: 2vh;
+            border-radius: 10px;
+            background-color: #111;
+            margin: 1vh;
+        }
+
+        #cards {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: start;
+            align-items: start;
+        }
+    </style>
+
+    <body>
+        <div id="main">
+            <h1>Hi, <span style="color: #fd532f;">
+                    <%= user.fname +' '+ user.lname %></span></h1>
+            <!-- <a class="button" href="/spaceguy/clean">Start Junk Cleaning</a>
+            <a class="button" href="/spaceguy/tracker">Track my location</a>
             <a class="button" href="/spaceguy/food">Get food routine</a>
             <a class="button" href="/spaceguy/health">View Health Stats</a>
-            <a class="button" href="/ai">Talk to JARVIS</a>
+            <a class="button" href="/ai">Talk to JARVIS</a> -->
+            <div id="cards">
+
+            <div id="mission" class="dash-card-1">
+                <h2>Mission Details</h2>
+                <p>Information not yet provided by agency. Please contact your agent and ask for a description of the mission.</p>
+            </div>
+
+                <div class="dash-card-1" id="vessel">
+                    <h2>Vessel Information</h2>
+                <p><span style="font-weight: bold;">Vessel Name: Stellar Harvester</span> <br>
+                    A deep-space vessel equipped with robotic arms and AI, designed for debris collection and recycling. Converts space junk into usable materials, supporting mission sustainability and safety.</p>
+                    <a href="" style="color: #fd532f; cursor: pointer;" >View Inventory &#8594;</a>
+                </div>
+                
+                <div id="communication" class="dash-card-1">
+                    <h2>Talk to your agency</h2>
+                </div>
+                <div id="clean" class="dash-card-1">
+                <h2>Clean Space Debris</h2>
+                <a href="/spaceguy/clean" style="color: #fd532f; cursor: pointer;" >Get Started &#8594;</a>
+            </div>
+        </div>
+        <div id="sos">
+            <button id="sosButton">SOS</button>
         </div>
     </div>
 </body>
