--- a/views/tracker.ejs
+++ b/views/tracker.ejs
@@ -74,7 +74,9 @@
     <div class="container">
         <div id="map"></div>
         <div id="info-panel">
+            <nav><a href="/spaceguy">&#9664; Back to dashboard</a></nav>
             <h1 style="color: #fd532f;">ISS Tracker</h1>
+
             <div class="info-box">
                 <h2>Keplerian Elements</h2>
                 <div id="keps"></div>
