--- a/views/food.ejs
+++ b/views/food.ejs
@@ -248,7 +248,7 @@
             ${mealItems.map(item => `<li>${item.servings} serving(s) of ${item.name}</li>`).join("")}
             </ul>
         `).join("")}
-        <p>Total Calories: ${ remainingCalories}</p>
+        <p>Total Calories: 2500</p>
         `;
 
                 updateInventoryTable();
