--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
         <div id="main">
 
             <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Rotating_earth_animated_transparent.gif"
-                style="position: absolute; top:20%; left: 30%; aspect-ratio: 1; width: 140vw; opacity: 0.7; filter: blur(7px);"
+                style="position: absolute; top:20%; left: 30%; aspect-ratio: 1; width: 140vw; opacity: 0.7; filter: blur(7px); z-index: -1;"
                 alt="">
 
 
@@ -35,9 +35,9 @@
                     <a href="/login">/login</a> <br>
                     <a href="/spaceguy">/spaceguy</a> <br>
                     <a href="/agency">/agency</a> <br>
-                    <a href="/spaceguy/spaceguy/code">/spaceguy/code</a> <br>
-                    <a href="/spaceguy/spaceguy/clean">/spaceguy/clean</a> <br>
-                    <a href="/spaceguy/spaceguy/health">/spaceguy/health</a> <br>
+                    <a href="/spaceguy/code">/spaceguy/code</a> <br>
+                    <a href="/spaceguy/clean">/spaceguy/clean</a> <br>
+                    <a href="/spaceguy/health">/spaceguy/health</a> <br>
                     <a href="/spaceguy/food">/spaceguy/food</a>
                 </div>
             </div>
