--- a/views/junk.ejs
+++ b/views/junk.ejs
@@ -75,6 +75,7 @@
     <span id='collect'> </span>
 </div>
 <div id="instructions">
+    <nav><a href="/spaceguy">&#9664; Back to dashboard</a></nav>
     <h3>Controls:</h3>
     <p>Mouse: Aim drone</p>
     <p>W: Move forward</p>
