--- a/views/components/navLanding.ejs
+++ b/views/components/navLanding.ejs
@@ -2,7 +2,7 @@
 <body>
 <style>
     *{
-        overflow-x: hidden;
+        box-sizing: border-box;
     }
     .nav{
         display: flex;
@@ -10,23 +10,35 @@
         width: 100%;
         align-items: center;
         justify-content: space-between;
-        height: 4vw;
+        height: 15vh;
         font-size: 1.2vw;
+        padding: 0 2vw 0 2vw;
         /* gap: 20vw; */
+        border-bottom: #545454 1px solid;
     }
-    .logo{
+    /* .logo{
         margin-left: 2vw;
-    }
+    } */
     .mid-part{
         display: flex;
-        gap: 2vw;
-        margin-right: 2vw;
+        gap: 2.5vw;
+        /* margin-right: 2vw; */
     }
     .btn{
         transition: 0.3s;
     }
     .btn:hover{
         color: #fd532f;
+    }
+    ::-webkit-scrollbar {
+        width: 5px;
+    }
+    ::-webkit-scrollbar-track {
+        background: #000;
+    }
+    ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background: #545454;
     }
 </style>
 <nav class="nav">
