--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,84 +1,103 @@
 <% layout('layout') -%>
 <%- include ./components/navLanding %>
-    <style>
-        body{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        #main {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-
-            border-radius: 20px;
-            border: 1px solid #545454;
-            margin-top: 20vh;
-            width: 60vh;
-            padding: 1vmin;
-            
-        }
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
+<style>
+    body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        overflow-x: hidden;
+    }
+    #main {
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         
-        #main form {
-            width: 100%;
-            margin: 3vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            gap: 1vmin;
-        }
-
-        form input {
-            background-color: transparent;
-            padding: 10px;
-            border: 1px solid #545454;
-            font-size: 1.1em;
-            border-radius: 10px;
-            width: 80%;
-            margin: 2vmin 0;
-        }
-
-        form label {
-            font-size: 1.1em;
-        }
-
-        form button {
-            color: #111;
-            background-color: #fd532f;
-            padding: 1.5vmin 2vmin;
-            border-radius: 10px;
-            font-size: 3vh;
-            font-weight: bold;
-            cursor: pointer;
-            border: none;
-        } 
+        width: 100vw;
+        height: 86.5vh;
         
-        p {
-            color: #818080;
-            text-align: center;
-            width: 70%;
-        }
-
-        h1 {
-            color: #fd532f;
-        }
+        border-radius: 20px;
+        /* margin-top: 10vh; */
+        padding: 1vmin;
+        
+        
+    }
+    
+    #main form {
+        /* width: 30vw; */
+        min-width: 35vw;
+        margin: 3vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1vmin;
+        border: 1px solid #545454;
+        padding: 3vh;
+        border-radius: 5px;
+    }
+    
+    form input {
+        background-color: transparent;
+        padding: 10px;
+        border: 1px solid #545454;
+        font-size: 1.1em;
+        border-radius: 5px;
+        width: 80%;
+        margin: 2vmin 0;
+    }
+    
+    form label {
+        font-size: 1.1em;
+    }
+    
+    form button {
+        color: #111;
+        background-color: #fd532f;
+        padding: 1.5vmin 2vmin;
+        border-radius: 5px;
+        font-size: 3vh;
+        font-weight: bold;
+        cursor: pointer;
+        border: none;
+    } 
+    
+    p {
+        color: #818080;
+        text-align: center;
+        width: 70%;
+    }
+    
+    h1 {
+        color: #fd532f;
+    }
     </style>
 
-    <div id="main">
-
+<div id="main">
+    
+    <form action="/login" method="post">
         <h1>Login</h1>
-        <form action="/login" method="post">
-            <label for="email">Enter email:</label>
-            <input type="email" required name="email" placeholder="Email">
-            <label for="password">Enter password:</label>
-            <input type="password" required name="password" placeholder="Password">
-            <button type="submit">Submit</button>
-            <p>Don't have an account? <a href="/register">Register Here.</a></p>
-        </form>
+        <label for="email">Enter email:</label>
+        <input type="email" required name="email" placeholder="Email">
+        <label for="password">Enter password:</label>
+        <input type="password" required name="password" placeholder="Password">
+        <button type="submit">Submit</button>
+        <p>Don't have an account? <a href="/register">Register Here.</a></p>
         <% if (messages.error) { %>
-            <p><%= messages.error %></p>
+            <p style="display: none;" id="error"><%= messages.error %></p>
             <% } %>
-        </div>
+        </form>
+    </div>
+<script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+<script>
+    const error = document.getElementById("error")
+    
+    if (error) {   
+        var notyf = new Notyf();
+
+        notyf.error(error.innerText);
+    }
+</script>
