--- a/views/food.ejs
+++ b/views/food.ejs
@@ -1,11 +1,11 @@
 <% layout('layout') -%>
+<%- include ./components/navLanding %>
     <style>
         body {
             font-family: 'Space Grotesk';
             background-color: #111;
             color: #e0e0e0;
             margin: 0;
-            padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -93,6 +93,7 @@
             border-radius: 15px;
             padding: 2vmin;
             margin-top: 10vh;
+            margin-bottom: 2vw;
         }
     </style>
         <div id="main">
