--- a/views/spaceguy.ejs
+++ b/views/spaceguy.ejs
@@ -1,4 +1,6 @@
 <% layout('layout') -%>
+<%- include ./components/navLanding %>
+
     <style>
         button {
             padding: 1.5vmin 2vmin;
