--- a/views/components/navLanding.ejs
+++ b/views/components/navLanding.ejs
@@ -52,6 +52,7 @@
         <a class="btn" href="/">Home</a>
         <a class="btn" href="/spaceguy">For Spaceguys</a>
         <a class="btn" href="/agency">For Agencies</a>
+        <a class="btn" href="/ai">Companion</a>
         <a class="btn" href="/login">Login</a>
         <a class="btn" href="/register">Register</a>
     </div>
