--- a/views/ai.ejs
+++ b/views/ai.ejs
@@ -37,7 +37,7 @@
 #skeleton-loader, #skeleton-loader-2 , #skeleton-loader-3 {
     width: 80%;
     height: 20px;
-    background: #2c2c2c;
+    background: #4d4d4d;
     animation: skeleton-loading 1s infinite alternate;
     border-radius: 4px;
     margin-bottom: 10px;
@@ -162,7 +162,7 @@
     })
 
     async function speakText(text) {
-            const response = await fetch('https://api.elevenlabs.io/v1/text-to-speech/pMsXgVXv3BLzUgSXRplE', {
+            const response = await fetch('https://api.elevenlabs.io/v1/text-to-speech/IKne3meq5aSn9XLyUdCD', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
