--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 <% layout('layout') -%>
+<script src="https://unpkg.com/@google/model-viewer@1.10.1/dist/model-viewer.js" type="module"></script>
+<script nomodule="" src="https://unpkg.com/@google/model-viewer@1.10.1/dist/model-viewer-legacy.js"></script>
     <%- include ./components/navLanding %>
         <style>
             * {
@@ -17,12 +19,19 @@
                 width: 50%;
                 margin-left: 4vw;
             }
+            
+            model-viewer {
+                width: 50vw;
+                height: 50vw;
+                position: absolute;
+                right: -5vw;
+                bottom: -15vw;
+                z-index: -1;
+            }
         </style>
         <div id="main">
 
-            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Rotating_earth_animated_transparent.gif"
-                style="position: absolute; top:20%; left: 30%; aspect-ratio: 1; width: 140vw; opacity: 0.7; filter: blur(7px); z-index: -1;"
-                alt="">
+            <model-viewer loading="eager" auto-rotate poster="poster_earth.jpg" src="earth_model.glb" shadow-intensity="1" alt="A 3D model of a shishkebab"></model-viewer>
 
 
             <div class="hero">
